Added a couple of pictures

--- a/aip.tex
+++ b/aip.tex
@@ -677,9 +677,14 @@ By construction, each row of $\collapse{A}$ is a row of $A$, and so the constrai
    The optimal set for $\LP(A, \vv{u})$ is shown in green, and is properly contained in the feasible set for $\LP(\collapse{A}, \collapse{\vv{u}})$, which also includes the red line segment.
 }
 \emily[inline]{These look awesome!  Maybe we should include a simple 2D example as well? }
+\pedro[inline]{I'll try to find a good 2D example.}
+\includegraphics[width=.47\textwidth]{Pictures/opt_for_collapse_may_change.pdf}
+\includegraphics[width=.52\textwidth]{Pictures/opt_for_collapse_may_change_2.pdf}
 
-\includegraphics[width=.45\textwidth]{Pictures/opt_for_collapse_may_change.pdf}
-\includegraphics[width=.45\textwidth]{Pictures/opt_for_collapse_may_change_2.pdf}
+\pedro[inline]{The Newton polyhedra for the first example, and its collapse.}
+\vskip 1cm
+\includegraphics[width=.5\textwidth]{Pictures/newton_polyhedron.pdf}
+\includegraphics[width=.4\textwidth]{Pictures/newton_polyhedron_of_collapse.pdf}
 
 \newpage
 \section{An auxiliary integer program}
