--- a/preamble.tex
+++ b/preamble.tex
@@ -110,7 +110,7 @@
 \newcommand{\Q}{\mathcal{Q}}
 %\newcommand{\N}{\mathrm{N}}
 \newcommand{\N}{\mathcal{N}}
-\newcommand{\M}{\mathrm{M}}
+\newcommand{\M}{\mathcal{M}}
 \renewcommand{\O}{\mathcal{O}}
 \newcommand{\Z}{\mathcal{Z}}
 
