--- a/aip.tex
+++ b/aip.tex
@@ -468,13 +468,14 @@ This (or something similar) could be a running example, to illustrate the variou
    The Newton polyhedron $\N$ of $A$ is shown in \Cref{fig: newton polyhedron}.
    The point $(17/4)\cdot \vv{u}$, shown in white, lies in the relative interior of the face
    \[\O = \conv(\col(A)) + \cone(\canvec_2),\]
-   so $\ft{A}{\vv{u}} = 4/17$ and $\mf(A,\vv{u}) = \O$.
+   shown in dark blue.
+   Thus, $\ft{A}{\vv{u}} = 4/17$ and $\mf(A,\vv{u}) = \O$.
 \end{example}
 }
 \begin{figure}
    \centering
    \includegraphics[width=.5\textwidth]{Pictures/newton_polyhedron.pdf}
-   \caption{The Newton polyhedron of the matrix $A$ described in }
+   \caption{The Newton polyhedron of the matrix $A$ described in \Cref{ex: ft}}
 \label{fig: newton polyhedron}
 \end{figure}
 
